# rust_study

./: .env  .gitignore  Cargo.toml  README.md
webapp/: Cargo.toml
webapp/src/: login.rs  main.rs  user.rs
webapp/src/config/: db.rs  mod.rs  oauth2.rs  redis.rs
webapp/src/login/: route.rs
webapp/src/user/: route.rs
weblib/: Cargo.toml
weblib/src/: extract.rs  lib.rs  login.rs  mime.rs  result.rs  routing.rs  state.rs
weblib/src/extract/: temp_file.rs
weblib/src/login/: oauth2.rs  oidc.rs
weblib/src/result/: to_response.rs
weblib_macro/: Cargo.toml
weblib_macro/doc/: init_macro.md
weblib_macro/src/: lib.rs
