[package]
name = "weblib"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
inventory.workspace = true
weblib_macro = { path = "../weblib_macro" }

futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

mime_guess = { workspace = true }
percent-encoding = { workspace = true }

dotenvy = { workspace = true }
indexmap = { workspace = true }
tempfile = {workspace = true}