[package]
name = "weblib"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
inventory.workspace = true
weblib_macro = { path = "../weblib_macro" }

futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

mime_guess = { workspace = true }
percent-encoding = { workspace = true }

dotenvy = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true, optional = true }

openidconnect = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }

async-trait = {workspace = true}
[features]
redis = ["dep:redis"]
openidconnect = ["dep:openidconnect"]
oauth2 = ["dep:oauth2"]